--- a/styles/scss/styles.scss
+++ b/styles/scss/styles.scss
@@ -15,6 +15,8 @@ body {
 }
 
 #data-table {
+  // Hidden by default
+  display: none;
   tr.clicked-marker {
     background-color: $bgTablePrimaryRow;
   }
