--- a/styles/scss/styles.scss
+++ b/styles/scss/styles.scss
@@ -1,7 +1,7 @@
 $bgTablePrimaryRow: #cfe2ff; // Borrowed from Bootstrap5.
 
 body {
-  font-family: Arial, sans-serif;
+  font-family: 'M PLUS 1p', sans-serif;
   margin: 0;
   padding: 0;
 }
