--- a/styles/scss/styles.scss
+++ b/styles/scss/styles.scss
@@ -22,14 +22,20 @@ body {
   }
 }
 
-// .leaflet-control-container {
-//   .custom-control {
-//     background-color: #555;
-//     padding: 4px;
-//     button: {
-//       color: #333;
-//       background-color: #fff;
-//       border-color: #ccc;
-//     }
-//   }
-// }
+.normal-div-icon {
+  border: 2px solid #fff;
+  background-color: rgba(255, 0, 128, 1);
+  border-radius: 50%;
+}
+
+.first-div-icon {
+  border: 2px solid #fff;
+  background-color: blue;
+  border-radius: 50%;
+}
+
+.last-div-icon {
+  border: 2px solid #fff;
+  background-color: green;
+  border-radius: 50%;
+}
