--- a/styles/scss/styles.scss
+++ b/styles/scss/styles.scss
@@ -40,7 +40,20 @@ body {
   height: $mapHeight;
 
   .leaflet-top.leaflet-left {
-    display: flex;
+    .leaflet-control-zoom {
+      display: none;
+    }
+    .custom-control {
+      display: flex;
+      flex-direction: column;
+      gap: 8px;
+      button.btn-white {
+        background-color: #fff;
+        &:hover, &:active {
+          background-color: #d3d4d5;
+        }
+      }
+    }
   }
 
   .leaflet-marker-icon {
