Fixed some issues related to clearing dates and times.

--- a/styles/scss/styles.scss
+++ b/styles/scss/styles.scss
@@ -38,9 +38,9 @@ body {
   .elevation {
     max-width: 4rem;
   }
-  .apply {
-    max-width: 1rem;
-  }
+  // .apply {
+  //   max-width: 1rem;
+  // }
 
 }
 
