--- a/styles/scss/styles.scss
+++ b/styles/scss/styles.scss
@@ -17,6 +17,12 @@ body {
   }
 }
 
+#op-btn-toolbar {
+  .label {
+    display: none;
+  }
+}
+
 #data-summary {
   display: flex;
   justify-content: center;
