Set display-related class names to the op buttons.

--- a/styles/scss/styles.scss
+++ b/styles/scss/styles.scss
@@ -17,11 +17,11 @@ body {
   }
 }
 
-#op-btn-toolbar {
-  .label {
-    display: none;
-  }
-}
+// #op-btn-toolbar {
+//   .label {
+//     display: none;
+//   }
+// }
 
 #data-summary {
   display: flex;
