--- a/styles/scss/styles.scss
+++ b/styles/scss/styles.scss
@@ -40,6 +40,9 @@ body {
         display: flex;
         justify-content: space-between;
         align-items: center;
+        .dropdown-toggle:after {
+          display: none;
+        }
       }
     }
   }
