Replaced the checkbox in the thead element with a three-dot menu.

--- a/styles/scss/styles.scss
+++ b/styles/scss/styles.scss
@@ -37,9 +37,9 @@ body {
   thead {
     th {
       .th-content {
-        display: flex;
-        justify-content: space-between;
-        align-items: center;
+        // display: flex;
+        // justify-content: space-between;
+        // align-items: center;
         .dropdown-toggle:after {
           display: none;
         }
