Fixed a bug that a wrong row was selected when the move icon on a balloon was clicked.

--- a/styles/scss/styles.scss
+++ b/styles/scss/styles.scss
@@ -17,6 +17,12 @@ body {
   }
 }
 
+#op-btn-toolbar {
+  #btn-shift, #btn-fill {
+    display: none;
+  }
+}
+
 #data-summary {
   display: flex;
   justify-content: center;
