Implemented a new toggled mode "insert a new marker".

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -1,104 +1,1 @@
-body {
-  font-family: "M PLUS 1p", sans-serif;
-  margin: 0;
-  padding: 0;
-}
-
-.navbar #goto-github {
-  color: rgb(255, 255, 255);
-}
-.navbar #goto-github:hover, .navbar #goto-github:active {
-  color: rgba(255, 255, 255, 0.8);
-}
-
-#op-btn-toolbar #btn-shift, #op-btn-toolbar #btn-fill {
-  display: none;
-}
-
-#data-summary {
-  display: flex;
-  justify-content: center;
-  gap: 2rem;
-}
-#data-summary h3.label {
-  font-size: 1rem;
-}
-
-#data-table thead th .th-content .dropdown-toggle:after {
-  display: none;
-}
-#data-table .elevation {
-  max-width: 6rem;
-}
-
-#map {
-  height: 480px;
-}
-#map .leaflet-top.leaflet-left .leaflet-control-zoom {
-  display: none;
-}
-#map .leaflet-top.leaflet-left .custom-control {
-  display: flex;
-  flex-direction: column;
-  gap: 8px;
-}
-#map .leaflet-top.leaflet-left .custom-control button.btn-white {
-  background-color: #fff;
-}
-#map .leaflet-top.leaflet-left .custom-control button.btn-white:hover, #map .leaflet-top.leaflet-left .custom-control button.btn-white:active {
-  background-color: #d3d4d5;
-}
-#map .leaflet-marker-icon .label {
-  color: #fff;
-  font-size: 12px;
-  font-weight: bold;
-}
-#map .leaflet-marker-icon.first-div-icon {
-  border: 2px solid #fff;
-  background-color: blue;
-  border-radius: 50%;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-}
-#map .leaflet-marker-icon.last-div-icon {
-  border: 2px solid #fff;
-  background-color: green;
-  border-radius: 50%;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-}
-#map .leaflet-marker-icon.normal-div-icon {
-  border: 2px solid #fff;
-  background-color: rgb(255, 0, 128);
-  border-radius: 50%;
-}
-#map .leaflet-popup-content button.remove-this-point {
-  --bs-btn-padding-y: .1rem;
-  --bs-btn-padding-x: .25rem;
-  --bs-btn-font-size: 100%;
-}
-
-.tooltip-inner {
-  text-align: unset;
-}
-
-footer a:link, footer a:visited {
-  color: #fff;
-}
-footer a:hover, footer a:active {
-  color: #ddd;
-}
-footer .avatar {
-  max-width: 2rem;
-  height: auto;
-  display: inline-block;
-}
-
-#scroll-to-top {
-  position: fixed;
-  bottom: 20px;
-  right: 20px;
-  display: none;
-}/*# sourceMappingURL=styles.css.map */
+body{font-family:"M PLUS 1p",sans-serif;margin:0;padding:0}.navbar #goto-github{color:#fff}.navbar #goto-github:hover,.navbar #goto-github:active{color:rgba(255,255,255,0.8)}#op-btn-toolbar #btn-shift,#op-btn-toolbar #btn-fill{display:none}#data-summary{display:flex;justify-content:center;gap:2rem}#data-summary h3.label{font-size:1rem}#data-table thead th .th-content .dropdown-toggle:after{display:none}#data-table .elevation{max-width:6rem}#map{height:480px}#map .leaflet-top.leaflet-left .leaflet-control-zoom{display:none}#map .leaflet-top.leaflet-left .custom-control{display:flex;flex-direction:column;gap:8px}#map .leaflet-top.leaflet-left .custom-control button.btn-white{background-color:#fff}#map .leaflet-top.leaflet-left .custom-control button.btn-white:hover,#map .leaflet-top.leaflet-left .custom-control button.btn-white:active{background-color:#d3d4d5}#map .leaflet-marker-icon .label{color:#fff;font-size:12px;font-weight:bold}#map .leaflet-marker-icon.first-div-icon{border:2px solid #fff;background-color:#ff0080;border-radius:50%;display:flex;justify-content:center;align-items:center}#map .leaflet-marker-icon.last-div-icon{border:2px solid #fff;background-color:#ff0080;border-radius:50%;display:flex;justify-content:center;align-items:center}#map .leaflet-marker-icon.normal-div-icon{border:2px solid #fff;background-color:#ff0080;border-radius:50%}#map .leaflet-popup-content button.remove-this-point{--bs-btn-padding-y:.1rem;--bs-btn-padding-x:.25rem;--bs-btn-font-size:100%}.tooltip-inner{text-align:unset}footer a:link,footer a:visited{color:#fff}footer a:hover,footer a:active{color:#ddd}footer .avatar{max-width:2rem;height:auto;display:inline-block}#scroll-to-top{position:fixed;bottom:20px;right:20px;display:none}
