--- a/styles/styles.scss
+++ b/styles/styles.scss
@@ -5,6 +5,7 @@ $fontFamily: 'M PLUS 1p', sans-serif;
 $normalMarkerBG: rgba(255, 0, 128, 1);
 $firstMarkerBG: rgba(255, 0, 128, 1);
 $lastMarkerBG: rgba(255, 0, 128, 1);
+$baseMarkerBG: blue;
 
 body {
   font-family: $fontFamily;
