CSS tweaks. I18n. JS improvements.

--- a/styles/styles.scss
+++ b/styles/styles.scss
@@ -14,7 +14,7 @@ body {
 }
 
 .navbar {
-  #goto-github {
+  #goto-github-repo {
     color: rgba(255,255,255,1);
     &:hover, &:active {
       color: rgba(255,255,255,0.8);
