--- a/styles/styles.scss
+++ b/styles/styles.scss
@@ -14,6 +14,12 @@ body {
 }
 
 .navbar {
+  .navbar-brand {
+    img {
+      height: 32px;
+      width: 32px;
+    }
+  }
   #goto-github-repo {
     color: rgba(255,255,255,1);
     &:hover, &:active {
